//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package protobuf;

option go_package = "./go_protobuf";

message ByteListV2 {
  repeated    ByteListListV2    List      =1;  //数组
}

message ByteListListV2 {
  repeated    bytes    List      =1;  //字节数组
}